# github-stars-organizer

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  SECURITY.md  Untitled  categories.example.toml  config.example.toml  devlog.md  learning-journal.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: plan.example.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/src/stars_organizer/: categorize.py  cli.py  github_api.py  llm_categorize.py  models.py  state.py
src/stars_organizer/: __init__.py  apply.py  categorize.py  cli.py  config.py  consolidate.py  github_api.py  github_web.py  llm_categorize.py  llm_providers.py
tests/: test_apply_guard.py  test_categorize.py  test_config.py  test_consolidate.py  test_github_web_parser.py  test_llm_config.py  test_llm_providers.py  test_plan_format.py
