[project]
name = "github-stars-organizer"
version = "0.1.0"
description = "Organize GitHub starred repos into Star Lists using smart categorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.scripts]
organize-stars = "stars_organizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stars_organizer"]
